--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,7 @@
 .ticket-container{
     width: 700px;
     border-radius: 0;
-    background-color: #a0a0a0;
+    /*background-color: #a0a0a0;*/
 }
 .ticket-container h4{
     font-size: 14pt;
@@ -9,4 +9,14 @@
 }
 .fs-12{
     font-size: 10pt !important;
+}
+.bg-headcard{
+    background-color: #a0aec0;
+    border-radius: 0 !important;
+    border: solid 1px #a0aec0 !important;
+
+}
+.ss{
+    border: solid 1px #a0aec0 !important;
+    border-radius: 0px !important;
 }
